<resources>
    <string name="app_name">RecyclerviewDemo</string>
    <string name="thomas_t_blue">Thomas T. Blue</string>
    <string name="feasibility_extra_piping"><![CDATA[Feasibility & Extra Piping]]></string>
    <string name="bp_number">BP Number</string>
    <string name="roberto_r_terry">Roberto R. Terry</string>
    <string name="_711_stoneybrook_road_cocoa_fl_32922">711 Stoneybrook Road Cocoa, FL 32922.</string>
    <string name="feasibility_status">Feasibility Status</string>
    <string name="title">Title</string>
    <string name="application_number">Application Number</string>
    <string name="save">Save</string>
    <string name="full_name_with_surname">Full Name With Surname*</string>
    <string name="dolores_a_odell">Dolores A. Odell</string>
    <string name="father_s_mother_s_husband_s_name">"Father's/Mother's/Husband's Name*</string>
    <string name="application_date">Application Date*</string>
    <string name="_14_10_2020">14-10-2020</string>
    <string name="payment_plan">Payment Plan*</string>
    <string name="owner">Owner</string>
    <string name="rented">Rented</string>
    <string name="upfront_payment">Upfront Payment</string>
    <string name="isBulk">ISBULK?</string>
    <string name="urgent_verification">Urgent Verification?</string>
    <string name="basic_details">Basic Details</string>
    <string name="upload_file">Upload Files</string>
    <string name="full_name">Full Name</string>
    <string name="ana_j_odell">Ana J. Odell</string>
    <string name="doloreslblair_dayrep_com">DoloresLBlair@dayrep.com</string>
    <string name="address">Address</string>
    <string name="_3741_hall_place_annona_tx_75550">3741 Hall Place Annona, TX 75550</string>
    <string name="city">City</string>
    <string name="annona">Annona</string>
    <string name="hint_choose_a_attachment_type">Select a file Choose a attachment type..</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_cancel">Cancel</string>
    <string name="pin_code">Pin Code *</string>
    <string name="_75550">75550</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="txt9898222224">98982 22224</string>
    <string name="proof_of_identity">Proof Of Identity</string>
    <string name="upload_registration_documents">Upload Registration Documents</string>
    <string name="proof_of_ownership">Proof Of Ownership</string>
    <string name="objection_certificate">No Objection Certificate</string>
    <string name="save_print"><![CDATA[Save & Print]]></string>
    <string name="bp_name">BP Name*</string>
    <string name="mobile_number_with_star">Mobile Number*</string>
    <string name="receipt_date">Receipt Date*</string>
    <string name="payment_mode">Payment Mode*</string>
    <string name="cheque_reference_no">Cheque/DD Reference No.*</string>
    <string name="_0001125">0001125</string>
    <string name="piping_details">Piping Details</string>
    <string name="rfc_status">RFC Status</string>
    <string name="extra_piping">Extra Piping Details</string>
    <string name="_piping">Piping Details</string>
    <string name="jmg_gas"><![CDATA[JMR & Gas]]></string>
    <string name="jmr_details">JMR Details</string>
    <string name="meter_details">Meter Details</string>
    <string name="gi_status">GI Status</string>
    <string name="data">Data</string>
    <string name="_98984_44448">98984 44448</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>
    <string name="your_account">Your Account</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="oldpassword_required">Old password field is required!!!</string>
    <string name="newpassword_required">New password field is required!!!</string>
    <string name="confirmpassword_required">Confirm password field is required!!!</string>
    <string name="password_dont_match">Password do not match!!!</string>
    <string name="success">Sucess</string>
    <string name="internet_connection">Please check internet connection</string>
    <string name="something_went_wrong">Something went wrong!!!</string>
    <string name="pipe_type_first">Please select pipe!</string>
    <string name="enter_email_mobile_number">Enter Email / Mobile Number</string>
    <string name="your_email_mobile_number">Your Email / Mobile Number</string>
    <string name="send">Send</string>
    <string name="didn_t_get_the_otp">Didn\'t get the Otp?</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_email_mobile">Enter Email Id Or Mobile Number</string>
    <string name="invalid_email_id">Invalid email id</string>
    <string name="reset_password">Reset Password</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="bank_name">Bank Name*</string>
    <string name="pos_number">POS Number</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="paid_amount">Paid Amount*</string>
    <string name="cheque_photo">Cheque Photo*</string>
    <string name="piping">Piping *</string>
    <string name="extra_piping_in">Extra Piping (in meters) </string>
    <string name="extra_piping_amount">Amount</string>
    <string name="extra_piping_total_amount">Total Amount *</string>
    <string name="extra_piping_payable_amount">Payable Amount *</string>
    <string name="extra_piping_CGST">CGST *</string>
    <string name="extra_piping_SGST">SGST *</string>
    <string name="meter_install_detail">Meter Installation Details</string>
    <string name="jmr_detail">JMR Details</string>
    <string name="meter_make">Meter Make</string>
    <string name="meter_serial">Meter Serial no. *</string>
    <string name="meter_reading">Meter Reading *</string>
    <string name="meter_lhs">LHS</string>
    <string name="meter_rhs">RHS</string>
    <string name="meter_photo">Meter Photo</string>
    <string name="upload_meter_photo">Upload Meter Photo</string>
    <string name="select_meter_make">Select Meter Make</string>
    <string name="alert_meter">Are you sure you want to add GI Status?</string>
    <string name="alert_feasibility">Do you want to Reject feasibility?</string>
    <string name="rejection_rsn">Rejection Reason</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="jmr_imr">JMR *</string>
    <string name="upload_imr">Upload JMR</string>
    <string name="select_mru">Select MRU</string>
    <string name="mru_id">MRU Id *</string>
    <string name="total_piping">Total Piping *</string>
    <string name="digital_imr">Do you want to generate Digital JMR?</string>
    <string name="upload">Upload</string>
    <string name="digital_sign">Take Digital Signature</string>
    <string name="user_canceled">User canceled action</string>
    <string name="user_did_not_grant_permissions">User has not accepted permissions</string>
    <string name="user_did_not_grant_permissions_never_ask">User has not accepted permissions with never ask. Go to settings</string>
    <string name="please_draw_signature">Please Draw Signature</string>
</resources>