<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtExtraPipingTotalAmounts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/extra_piping_total_amount"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtExtraPipingTotalAmounts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_5"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:text="0.0"
        android:focusable="false"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtExtraPipingTotalAmounts"
        app:layout_constraintStart_toStartOf="@+id/txtExtraPipingTotalAmounts"
        app:layout_constraintTop_toBottomOf="@+id/txtExtraPipingTotalAmounts" />

    <View
        android:id="@+id/viewExtraPipingTotalAmounts"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="@+id/edtExtraPipingTotalAmounts"
        app:layout_constraintStart_toStartOf="@+id/edtExtraPipingTotalAmounts"
        app:layout_constraintTop_toBottomOf="@+id/edtExtraPipingTotalAmounts" />


    <TextView
        android:id="@+id/txtExtraPipingCGSTs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/extra_piping_CGST"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintEnd_toEndOf="@+id/viewExtraPipingTotalAmounts"
        app:layout_constraintStart_toStartOf="@+id/viewExtraPipingTotalAmounts"
        app:layout_constraintTop_toBottomOf="@+id/viewExtraPipingTotalAmounts" />

    <EditText
        android:id="@+id/edtExtraPipingCGSTs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_5"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:imeOptions="actionNext"
        android:inputType="number"

        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtExtraPipingCGSTs"
        app:layout_constraintStart_toStartOf="@+id/txtExtraPipingCGSTs"
        app:layout_constraintTop_toBottomOf="@+id/txtExtraPipingCGSTs" />

    <View
        android:id="@+id/viewExtraPipingCGSTs"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="@+id/edtExtraPipingCGSTs"
        app:layout_constraintStart_toStartOf="@+id/edtExtraPipingCGSTs"
        app:layout_constraintTop_toBottomOf="@+id/edtExtraPipingCGSTs" />

    <TextView
        android:id="@+id/txtExtraPipingSGSTs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/extra_piping_SGST"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintEnd_toEndOf="@+id/viewExtraPipingCGSTs"
        app:layout_constraintStart_toStartOf="@+id/viewExtraPipingCGSTs"
        app:layout_constraintTop_toBottomOf="@+id/viewExtraPipingCGSTs" />

    <EditText
        android:id="@+id/edtExtraPipingSGSTs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_5"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtExtraPipingSGSTs"
        app:layout_constraintStart_toStartOf="@+id/txtExtraPipingSGSTs"
        app:layout_constraintTop_toBottomOf="@+id/txtExtraPipingSGSTs" />

    <View
        android:id="@+id/viewExtraPipingSGSTs"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="@+id/edtExtraPipingSGSTs"
        app:layout_constraintStart_toStartOf="@+id/edtExtraPipingSGSTs"
        app:layout_constraintTop_toBottomOf="@+id/edtExtraPipingSGSTs" />

    <TextView
        android:id="@+id/txtExtraPipingPayableAmounts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/extra_piping_payable_amount"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintEnd_toEndOf="@+id/viewExtraPipingSGSTs"
        app:layout_constraintStart_toStartOf="@+id/viewExtraPipingSGSTs"
        app:layout_constraintTop_toBottomOf="@+id/viewExtraPipingSGSTs" />

    <EditText
        android:id="@+id/edtExtraPipingPayableAmounts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_5"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtExtraPipingPayableAmounts"
        app:layout_constraintStart_toStartOf="@+id/txtExtraPipingPayableAmounts"
        app:layout_constraintTop_toBottomOf="@+id/txtExtraPipingPayableAmounts" />

    <View
        android:id="@+id/viewExtraPipingPayableAmount"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="@+id/edtExtraPipingPayableAmounts"
        app:layout_constraintStart_toStartOf="@+id/edtExtraPipingPayableAmounts"
        app:layout_constraintTop_toBottomOf="@+id/edtExtraPipingPayableAmounts" />
</androidx.constraintlayout.widget.ConstraintLayout>