<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clPiping"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/height_5"
    android:background="@drawable/cardview_background"
    android:padding="@dimen/margin_10">

    <LinearLayout
        android:id="@+id/llAddPipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtPiping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/piping"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintEnd_toEndOf="parent" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgAddDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitEnd"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_add_button" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgDeleteDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitEnd"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_close" />
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llPiping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_15"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="@+id/llAddPipe"
        app:layout_constraintStart_toStartOf="@+id/llAddPipe"
        app:layout_constraintTop_toBottomOf="@+id/llAddPipe">

        <Spinner
            android:id="@+id/pipingTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:textDirection="rtl" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPipingTyArrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/ic_scroll" />


    </LinearLayout>

    <View
        android:id="@+id/viewSpinner"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="@+id/llPiping"
        app:layout_constraintStart_toStartOf="@+id/llPiping"
        app:layout_constraintTop_toBottomOf="@+id/llPiping" />

    <TextView
        android:id="@+id/txtExtraPiping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/extra_piping_in"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintEnd_toEndOf="@+id/viewSpinner"
        app:layout_constraintStart_toStartOf="@+id/viewSpinner"
        app:layout_constraintTop_toBottomOf="@+id/viewSpinner" />

    <EditText
        android:id="@+id/edtExtraPiping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_5"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtExtraPiping"
        app:layout_constraintStart_toStartOf="@+id/txtExtraPiping"
        app:layout_constraintTop_toBottomOf="@+id/txtExtraPiping" />

    <View
        android:id="@+id/viewExtraPiping"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="@+id/edtExtraPiping"
        app:layout_constraintStart_toStartOf="@+id/edtExtraPiping"
        app:layout_constraintTop_toBottomOf="@+id/edtExtraPiping" />


    <TextView
        android:id="@+id/txtExtraPipingAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/extra_piping_amount"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintEnd_toEndOf="@+id/viewExtraPiping"
        app:layout_constraintStart_toStartOf="@+id/viewExtraPiping"
        app:layout_constraintTop_toBottomOf="@+id/viewExtraPiping" />

    <EditText
        android:id="@+id/edtExtraPipingAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_5"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtExtraPipingAmount"
        app:layout_constraintStart_toStartOf="@+id/txtExtraPipingAmount"
        app:layout_constraintTop_toBottomOf="@+id/txtExtraPipingAmount" />

    <View
        android:id="@+id/viewExtraPipingAmount"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="@+id/edtExtraPipingAmount"
        app:layout_constraintStart_toStartOf="@+id/edtExtraPipingAmount"
        app:layout_constraintTop_toBottomOf="@+id/edtExtraPipingAmount" />


</androidx.constraintlayout.widget.ConstraintLayout>